chore(ci): Disable strict typing matrix block & fix final type annotations
